// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthDetails renders deployments failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      ServiceHealth {
        "envoy": Object {
          "inbound": Object {
            "healthy": 1,
            "total": 10,
          },
          "outbound": Object {
            "healthy": 1,
            "total": 1,
          },
        },
        "items": Array [
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "text": "Inbound: 1 / 10",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "Outbound: 1 / 1",
              },
            ],
            "report": "Envoy health degraded",
            "status": Object {
              "color": "#ec7a08",
              "icon": "warning-triangle-o",
              "name": "Degraded",
              "priority": 2,
            },
            "title": "Envoy Health",
          },
          Object {
            "status": Object {
              "color": "#72767b",
              "name": "No health information",
              "priority": 0,
              "text": "N/A",
            },
            "text": "No requests over last min",
            "title": "Error Rate",
          },
        ],
        "rateInterval": 60,
        "requests": Object {
          "errorRatio": -1,
          "inboundErrorRatio": -1,
          "outboundErrorRatio": -1,
        },
      }
    }
    id="svc"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Popover
        bsClass="popover"
        id="svc-health-tooltip"
        placement="right"
        title=""
      >
        <div>
          <strong>
            <Icon
              name="warning-triangle-o"
              type="pf"
            />
             Envoy Health: 
          </strong>
          <ul
            style={
              Object {
                "listStyleType": "none",
                "paddingLeft": 12,
              }
            }
          >
            <li>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
               
              Inbound: 1 / 10
            </li>
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              Outbound: 1 / 1
            </li>
          </ul>
        </div>
        <div>
          <strong>
            <span
              style={
                Object {
                  "color": "#72767b",
                }
              }
            >
              N/A
            </span>
             Error Rate: 
          </strong>
          No requests over last min
        </div>
      </Popover>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Popover
          bsClass="popover"
          id="svc-health-tooltip"
          placement="right"
          title=""
        >
          <div>
            <strong>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
               Envoy Health: 
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                 
                Inbound: 1 / 10
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                Outbound: 1 / 1
              </li>
            </ul>
          </div>
          <div>
            <strong>
              <span
                style={
                  Object {
                    "color": "#72767b",
                  }
                }
              >
                N/A
              </span>
               Error Rate: 
            </strong>
            No requests over last min
          </div>
        </Popover>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`HealthDetails renders envoy degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      ServiceHealth {
        "envoy": Object {
          "inbound": Object {
            "healthy": 1,
            "total": 10,
          },
          "outbound": Object {
            "healthy": 1,
            "total": 1,
          },
        },
        "items": Array [
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#ec7a08",
                  "icon": "warning-triangle-o",
                  "name": "Degraded",
                  "priority": 2,
                },
                "text": "Inbound: 1 / 10",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "Outbound: 1 / 1",
              },
            ],
            "report": "Envoy health degraded",
            "status": Object {
              "color": "#ec7a08",
              "icon": "warning-triangle-o",
              "name": "Degraded",
              "priority": 2,
            },
            "title": "Envoy Health",
          },
          Object {
            "status": Object {
              "color": "#72767b",
              "name": "No health information",
              "priority": 0,
              "text": "N/A",
            },
            "text": "No requests over last min",
            "title": "Error Rate",
          },
        ],
        "rateInterval": 60,
        "requests": Object {
          "errorRatio": -1,
          "inboundErrorRatio": -1,
          "outboundErrorRatio": -1,
        },
      }
    }
    id="svc"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Popover
        bsClass="popover"
        id="svc-health-tooltip"
        placement="right"
        title=""
      >
        <div>
          <strong>
            <Icon
              name="warning-triangle-o"
              type="pf"
            />
             Envoy Health: 
          </strong>
          <ul
            style={
              Object {
                "listStyleType": "none",
                "paddingLeft": 12,
              }
            }
          >
            <li>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
               
              Inbound: 1 / 10
            </li>
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              Outbound: 1 / 1
            </li>
          </ul>
        </div>
        <div>
          <strong>
            <span
              style={
                Object {
                  "color": "#72767b",
                }
              }
            >
              N/A
            </span>
             Error Rate: 
          </strong>
          No requests over last min
        </div>
      </Popover>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Popover
          bsClass="popover"
          id="svc-health-tooltip"
          placement="right"
          title=""
        >
          <div>
            <strong>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
               Envoy Health: 
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                 
                Inbound: 1 / 10
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                Outbound: 1 / 1
              </li>
            </ul>
          </div>
          <div>
            <strong>
              <span
                style={
                  Object {
                    "color": "#72767b",
                  }
                }
              >
                N/A
              </span>
               Error Rate: 
            </strong>
            No requests over last min
          </div>
        </Popover>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`HealthDetails renders healthy 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      ServiceHealth {
        "envoy": Object {
          "inbound": Object {
            "healthy": 1,
            "total": 1,
          },
          "outbound": Object {
            "healthy": 1,
            "total": 1,
          },
        },
        "items": Array [
          Object {
            "children": Array [
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "Inbound: 1 / 1",
              },
              Object {
                "status": Object {
                  "color": "#3f9c35",
                  "icon": "ok",
                  "name": "Healthy",
                  "priority": 1,
                },
                "text": "Outbound: 1 / 1",
              },
            ],
            "status": Object {
              "color": "#3f9c35",
              "icon": "ok",
              "name": "Healthy",
              "priority": 1,
            },
            "title": "Envoy Health",
          },
          Object {
            "status": Object {
              "color": "#72767b",
              "name": "No health information",
              "priority": 0,
              "text": "N/A",
            },
            "text": "No requests over last min",
            "title": "Error Rate",
          },
        ],
        "rateInterval": 60,
        "requests": Object {
          "errorRatio": -1,
          "inboundErrorRatio": -1,
          "outboundErrorRatio": -1,
        },
      }
    }
    id="svc"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Popover
        bsClass="popover"
        id="svc-health-tooltip"
        placement="right"
        title=""
      >
        <div>
          <strong>
            <Icon
              name="ok"
              type="pf"
            />
             Envoy Health: 
          </strong>
          <ul
            style={
              Object {
                "listStyleType": "none",
                "paddingLeft": 12,
              }
            }
          >
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              Inbound: 1 / 1
            </li>
            <li>
              <Icon
                name="ok"
                type="pf"
              />
               
              Outbound: 1 / 1
            </li>
          </ul>
        </div>
        <div>
          <strong>
            <span
              style={
                Object {
                  "color": "#72767b",
                }
              }
            >
              N/A
            </span>
             Error Rate: 
          </strong>
          No requests over last min
        </div>
      </Popover>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Popover
          bsClass="popover"
          id="svc-health-tooltip"
          placement="right"
          title=""
        >
          <div>
            <strong>
              <Icon
                name="ok"
                type="pf"
              />
               Envoy Health: 
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                Inbound: 1 / 1
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                Outbound: 1 / 1
              </li>
            </ul>
          </div>
          <div>
            <strong>
              <span
                style={
                  Object {
                    "color": "#72767b",
                  }
                }
              >
                N/A
              </span>
               Error Rate: 
            </strong>
            No requests over last min
          </div>
        </Popover>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
